added dummy, stub and tests using mocking